--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,9 @@
       "class-methods-use-this":"off",
       "no-useless-constructor":"off",
       "camelcase": "off",
+      "@typescript-eslint/no-unused-vars": ["error",  {
+        "argsIgnorePattern": "_"
+      }],
       "import/extensions": [
         "error",
         "ignorePackages",
