admin user seed

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "build": "tsc",
     "dev:server": "ts-node-dev --inspect --trace-warnings --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
+    "seed:admin": "ts-node-dev src/shared/infra/typeorm/seed/admin.ts",
     "test": "jest"
   },
   "devDependencies": {
