--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,7 @@
     "extends": [
         "airbnb-base",
         "plugin:@typescript-eslint/recommended",
-        "prettier/@typescript-eslint",
+        "prettier",
         "plugin:prettier/recommended"
     ],
     "parser": "@typescript-eslint/parser",
@@ -17,6 +17,7 @@
     },
     "plugins": [
         "@typescript-eslint",
+        "eslint-plugin-import-helpers",
         "prettier"
     ],
     "rules": {
