--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
+    "supertest": "^6.1.4",
     "tsyringe": "^4.5.0",
     "typeorm": "^0.2.29",
     "uuid": "^8.3.2",
@@ -21,13 +22,14 @@
     "dev:server": "ts-node-dev --inspect --trace-warnings --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
     "seed:admin": "ts-node-dev src/shared/infra/typeorm/seed/admin.ts",
-    "test": "jest"
+    "test": "NODE_ENV=test jest --detectOpenHandles"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.12",
     "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "^8.5.2",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.1",
     "eslint": "^7.28.0",
@@ -35,6 +37,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-import-helpers": "^1.1.0",
     "eslint-plugin-prettier": "^3.4.0",
     "jest": "^27.0.5",
     "prettier": "^2.3.1",
