--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
       "prettier/prettier": "error",
       "class-methods-use-this":"off",
       "no-useless-constructor":"off",
+      "import/prefer-default-export": "off",
       "camelcase": "off",
       "@typescript-eslint/no-unused-vars": ["error",  {
         "argsIgnorePattern": "_"
