--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0",
+    "rate-limiter-flexible": "^2.2.4",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "supertest": "^6.1.4",
     "tsyringe": "^4.5.0",
@@ -31,6 +33,7 @@
     "@types/express": "^4.17.12",
     "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "^8.5.2",
+    "@types/redis": "^2.8.31",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.1",
