--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "supertest": "^6.1.4",
+    "swagger-ui-express": "^4.1.6",
     "tsyringe": "^4.5.0",
     "typeorm": "^0.2.29",
     "uuid": "^8.3.2",
@@ -35,6 +36,7 @@
     "@types/jsonwebtoken": "^8.5.2",
     "@types/redis": "^2.8.31",
     "@types/supertest": "^2.0.11",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.1",
     "eslint": "^7.28.0",
